--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 Flask==1.1.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy==1.19.3
-tensorflow
+gevent==1.4.0
+h5py==2.10.0
+numpy==1.17.0
+Pillow==6.1.0
+tensorflow==2.3.1
+Werkzeug==0.16.0
